[project]
name = "async-api-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "databases[aiosqlite,asyncpg]>=0.9.0",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.44",
    "starlette>=0.49.3",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]
